--- a/content/blog/华中科技大学.md
+++ b/content/blog/华中科技大学.md
@@ -1,7 +1,15 @@
 ---
+author: "北京大学软件工程研究所"
+date: 2019-04-20
+linktitle: 华中科技大学
+menu:
+  main:
+    parent: tutorials
+next: /tutorials/github-pages-blog
+prev: /tutorials/automated-deployments
 title: "国家重点研发计划《人机物融合的云计算架构与平台》2019年第一季度项目汇报交流会在华中科技大学顺利举办"
-date: 2019-4-20T12:04:16-05:00
-
+weight: 10
 ---
+
 2019年3月22日，国家重点研发计划“人机物融合的云计算架构与平台” 项目汇报交流会在华中科技大学顺利举办。项目17家参与单位均派代表参加了会议。 项目负责人黄罡教授介绍数据生产关系现状，传统数据生产关系缺陷，以及世界范围内，数据生产关系改革的最新进展。并强调我国当前工业互联网环境下亟需改革数据生产关系。之后具体介绍北大数睿项目集成解决方案。各项目参与单位根据自己的实际研究方向与进度，对各自所负责部分任务的可行性以及相应实现方式做出描述并参与讨论，确定项目平台的集成完成方式。随后，复旦大学彭鑫教授叙述智慧养老场景设想，具体论述智慧养老场景与当前项目结合的可行性。提出项目平台与智慧养老结合方式的设想，及相关细节问题。
 ![avatar](http://qiniu-idup.nemoworks.info/pek_1.jpeg)
