--- a/content/blog/深圳大学.md
+++ b/content/blog/深圳大学.md
@@ -1,7 +1,14 @@
 ---
+author: "北京大学软件工程研究所"
+date: 2019-04-20
+linktitle: 深圳大学
+menu:
+  main:
+    parent: tutorials
+next: /tutorials/github-pages-blog
+prev: /tutorials/automated-deployments
 title: "国家重点研发计划《人机物融合的云计算架构与平台》2018年第四季度项目汇报交流会在深圳大学顺利举办"
-date: 2019-4-20T11:58:39-05:00
-
+weight: 10
 ---
 2018年11月24日下午，国家重点研发计划“人机物融合的云计算架构与平台” 项目2018年第四季度汇报交流会在深圳大学顺利举办。项目17家参与单位均派代表参加了会议。 项目负责人黄罡教授从项目背景、关键挑战、创新成果、未来趋势四个方面介绍了项目层面的执行情况。各课题负责单位分别介绍了课题年度进展。与会代表就项目与课题的进展和下一步研究计划进行了深入的交流，并讨论确定了向科技部进行年度汇报的内容。
 ![avatar](http://qiniu-idup.nemoworks.info/pek_2.png)
