--- a/themes/hugo-theme-bootstrap4-blog/i18n/zh-Hant-TW.yaml
+++ b/themes/hugo-theme-bootstrap4-blog/i18n/zh-Hant-TW.yaml
@@ -1,38 +1,38 @@
 - id: about
-  translation: "關於"
+  translation: "关于"
 
 - id: home
-  translation: "首頁"
+  translation: "首页"
 
 - id: recentPosts
-  translation: "最近發表"
+  translation: "最近发表"
 
 - id: readMore
-  translation: "繼續閱讀 →"
+  translation: "继续阅读 →"
 
 - id: translations
-  translation: "翻譯"
+  translation: "翻译"
 
 - id: share
   translation: "分享"
 
 - id: paginatorPrevious
-  translation: "上一頁"
+  translation: “上一页”
 
 - id: paginatorNext
-  translation: "下一頁"
+  translation: "下一页"
 
 - id: cookieMessage
   translation: "本站使用 cookies。"
 
 - id: cookieLink
-  translation: "進一步瞭解。"
+  translation: "进一步了解。"
 
 - id: cookieDismiss
   translation: "知道了！"
 
 - id: backToTop
-  translation: "回到頁首"
+  translation: "回到首页"
 
 - id: links
-  translation: "連結"
+  translation: "链接"
